--- a/index.html
+++ b/index.html
@@ -1,34 +1,49 @@
 <!DOCTYPE>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>About Soul</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<header>
 <h1>My Life</h1>
+</header>
 <h2>Military Life</h2>
-<p>I served in the USAF. During my time in the USAF I was an Security Forces (military police) member.
-  I spent most of my time doing nuclear security. I spent my last year doing law enforcement. When i was Honorable discharged
-    my rank was E-4, Senior Airman.</p>
+<p>I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong> I was a Security Forces (military police) member.
+    I spent most of my time doing <em><span style="color: red;">nuclear security</span></em>. I became a certified Senior Entry Controller of a <span style="color: green;"> multi-billion dollar facility</span>
+    at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5. I also received training in law enforcement and responded to alerts and incidents.
+    At the time of my Honorable discharge my rank was E-4 Senior Airman.</p>
 
-<img src="soul.jpg" alt="Souls Military Photo" width="300" , height="300"/>
+    <img src="soul.jpg" alt="Souls Military Photo" class="center" width="600" height="600"/>
 
-<a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/">Kirtland Warrior</a>
+<div class="link">
+<a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/">
+    Kirtland Warrior Recognition</a>
+</div>
 
 <h2>Civilian Life</h2>
-<p>I also have had a lot of training and schooling since my time in the military.
-I have been to several community colleges and trade schools.</p>
+<p>I spent most of my active duty life and my civilian life learning. I find nothing more thrilling
+engaging with people for the sake of furthering our education. Once I was seperated from the military
+I could not escape my desire to learn. I made sure to sure as much of the Gi Bill as I could. A few
+of the schools I went to:</p>
 <ul>
-    <li>Cuyahoga Community College</li>
-    <li>Arapahoe Community College</li>
-    <li>Aurora Community college</li>
-    <li>Central New Mexico Community College</li>
-    <li>Great Lakes Truck Driving School</li>
-    <li>Ohio Technical College-PowerSport Institute</li>
-    <li>Heavy Construction Academy</li>
-</ul>
-<p>Although I have had a lot of training and received many certificates i have no formal degree. I like to consider myself
-a Professional Student. I have always enjoyed the school setting and being in an environment of learning.</p>
+    <li><strong>Cuyahoga Community College</strong></li>
+    <li><strong>Arapahoe Community College</strong></li>
+    <li><strong>Aurora Community College</strong></li>
+    <li><strong>Community College of the Air Force</strong></li>
+    <li><strong>Central New Mexico Community College</strong></li>
+    <li><strong>Great Lakes Truck Driving School</strong></li>
+    <li><strong>Ohio Technical College-PowerSport Institute</strong></li>
+    <li><strong>Heavy Construction Academy</strong></li>
 
+</ul>
+
+<p>Although I have had a lot of training and received many certificates I have no formal degree. I like to consider myself
+    a Professional Student. I have always enjoyed the school setting and being in an environment of learning. Learning is a <strong>Top</strong>
+    priority in my life, but gaming will always be my first true love.♥</p>
+
+
+<embed src="https://www.play-games.com/embed/21582.html" width="650" height="650">
 </body>
 </html>
