--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h1>My Life</h1>
 </header>
 <h2>Military Life</h2>
-<p>I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong> I was a Security Forces (military police) member.
+<p>I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
     I spent most of my time doing <em><span style="color: red;">nuclear security</span></em>. I became a certified Senior Entry Controller of a <span style="color: green;"> multi-billion dollar facility</span>
     at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5. I also received training in law enforcement and responded to alerts and incidents.
     At the time of my Honorable discharge my rank was E-4 Senior Airman.</p>
