--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ of the schools I went to:</p>
 
 </ul>
 
-<p>Although I have had a lot of training and received many certificates I have no formal degree. I like to consider myself
+<p>Although I have had a lot of training and received many certificates, I have no formal degree. I like to consider myself
     a Professional Student. I have always enjoyed the school setting and being in an environment of learning. Learning is a <strong>Top</strong>
     priority in my life, but gaming will always be my first true love.♥</p>
 
