--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-<h1>My Life</h1>
+  <header>
+  <h1>My Life</h1>
 </header>
 <h2>Military Life</h2>
-<p>I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
+  <p>I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
     I spent most of my time doing <em><span style="color: red;">nuclear security</span></em>. I became a certified Senior Entry Controller of a <span style="color: green;"> multi-billion dollar facility</span>
     at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5. I also received training in law enforcement and responded to alerts and incidents.
     At the time of my Honorable discharge my rank was E-4 Senior Airman.</p>
@@ -18,12 +18,12 @@
     <img src="soul.jpg" alt="Souls Military Photo" class="center" width="600" height="600"/>
 
 <div class="link">
-<a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/">
+      <a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/">
     Kirtland Warrior Recognition</a>
 </div>
 
 <h2>Civilian Life</h2>
-<p>I spent most of my active duty life and my civilian life learning. I find nothing more thrilling
+  <p>I spent most of my active duty life and my civilian life learning. I find nothing more thrilling
 engaging with people for the sake of furthering our education. Once I was seperated from the military
 I could not escape my desire to learn. I made sure to sure as much of the Gi Bill as I could. A few
 of the schools I went to:</p>
@@ -39,11 +39,16 @@ of the schools I went to:</p>
 
 </ul>
 
-<p>Although I have had a lot of training and received many certificates, I have no formal degree. I like to consider myself
+  <p>Although I have had a lot of training and received many certificates, I have no formal degree. I like to consider myself
     a Professional Student. I have always enjoyed the school setting and being in an environment of learning. Learning is a <strong>Top</strong>
     priority in my life, but gaming will always be my first true love.♥</p>
 
 
 <embed src="https://www.play-games.com/embed/21582.html" width="650" height="650">
 </body>
+<footer>
+    <p>Author: Soul Sullivan</p>
+    <p>Creator of So So Cozy Token</p>
+    <a href="https://pancakeswap.finance/swap?chain=bsc&inputCurrency=0x2C01d27E228e665Bd8FCFccbA7B828c53Ada175a">So So Cozy Crypto Token</a>
+</footer>
 </html>
