--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
 <h2>Military Life</h2>
   <p>I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
     I spent most of my time doing <em><span style="color: red;">nuclear security</span></em>. I became a certified Senior Entry Controller of a <span style="color: green;"> multi-billion dollar facility</span>
-    at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5. I also received training in law enforcement and responded to alerts and incidents.
+    at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5. I also received training in law enforcement and responded to alerts and incidents. Weapons I have been trained on are as follows:
+  <ul>
+      <li>M4</li>
+      <li>M9</li>
+      <li>M16</li>
+      <li>M203</li>
+      <li>M249</li>
+      <li>M240B</li>
+
+  </ul>
     At the time of my Honorable discharge my rank was E-4 Senior Airman.</p>
 
     <img src="soul.jpg" alt="Souls Military Photo" class="center" width="600" height="600"/>
