Added more text added more breaks

--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
 </head>
 <body>
   <header>
+      <script>
+          alert("Are You Sure You Wanna Know About Soul?!?!")
+      </script>
   <h1>My Life</h1>
 </header>
+
 <h2>Military Life</h2>
-  <p>I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
-    I spent most of my time doing <em><span style="color: red;">nuclear security</span></em>. I became a certified Senior Entry Controller of a <span style="color: green;"> multi-billion dollar facility</span>
-    at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5. I also received training in law enforcement and responded to alerts and incidents. Weapons I have been trained on are as follows:
+  <p> I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
+    I spent most of my time doing <em><span style="color: red;">nuclear security</span></em>.<br> I became a certified Senior Entry Controller of a <span style="color: green;"> multi-billion dollar facility</span>
+    at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5.<br>I also received training in law enforcement and responded to alerts and incidents.<br>Weapons I have been trained on are as follows:
+
   <ul>
       <li>M4</li>
       <li>M9</li>
@@ -22,6 +27,7 @@
       <li>M240B</li>
 
   </ul>
+
     At the time of my Honorable discharge my rank was E-4 Senior Airman.</p>
 
     <img src="soul.jpg" alt="Souls Military Photo" class="center" width="600" height="600"/>
@@ -30,11 +36,10 @@
       <a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/">
     Kirtland Warrior Recognition</a>
 </div>
-
-<h2>Civilian Life</h2>
-  <p>I spent most of my active duty life and my civilian life learning. I find nothing more thrilling
+  <h2>Civilian Life</h2>
+  <p>I spent most of my active duty life and my civilian life learning.<br>I find nothing more thrilling
 engaging with people for the sake of furthering our education. Once I was seperated from the military
-I could not escape my desire to learn. I made sure to sure as much of the Gi Bill as I could. A few
+I could not escape my desire to learn. I made sure to sure as much of the Gi Bill as I could.<br>A few
 of the schools I went to:</p>
 <ul>
     <li><strong>Cuyahoga Community College</strong></li>
@@ -49,7 +54,7 @@ of the schools I went to:</p>
 </ul>
 
   <p>Although I have had a lot of training and received many certificates, I have no formal degree. I like to consider myself
-    a Professional Student. I have always enjoyed the school setting and being in an environment of learning. Learning is a <strong>Top</strong>
+    a Professional Student. I have always enjoyed the school setting and being in an environment of learning.<br> Learning is a <strong>Top</strong>
     priority in my life, but gaming will always be my first true love.♥</p>
 
 
