Added second alert.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <header>
       <script>
           alert("Are You Sure You Wanna Know About Soul?!?!")
+
+
+          alert("LAST CHANCE!!!!!!")
       </script>
   <h1>My Life</h1>
 </header>
