--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -33,10 +33,10 @@
 
   At the time of my Honorable discharge my rank was E-4 Senior Airman.
 
-  <img src="soul.jpg" alt="Souls Military Photo" class="center" width="600" height="600"/>
+  <img src="soul.jpg" alt="Souls Military Photo" class="center" width="600" height="600">
 
 <div class="link">
-      <a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/">
+      <a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/" target="_blank">
     Kirtland Warrior Recognition</a>
 </div>
   <h2>Civilian Life</h2>
@@ -62,10 +62,14 @@ of the schools I went to:</p>
 
 
 <embed src="https://www.play-games.com/embed/21582.html" width="650" height="650">
+
+  <footer>
+      <p>Author: Soul Sullivan</p>
+      <p>Creator of So, So Cozy Token</p>
+      <a href="https://pancakeswap.finance/swap?chain=bsc&inputCurrency=0x2C01d27E228e665Bd8FCFccbA7B828c53Ada175a" target="_blank">So So Cozy Crypto Token</a>
+  </footer>
 </body>
-<footer>
-    <p>Author: Soul Sullivan</p>
-    <p>Creator of So, So Cozy Token</p>
-    <a href="https://pancakeswap.finance/swap?chain=bsc&inputCurrency=0x2C01d27E228e665Bd8FCFccbA7B828c53Ada175a">So So Cozy Crypto Token</a>
-</footer>
+
+
+
 </html>
