Added links to first list

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5.<br>I also received training in law enforcement and responded to alerts and incidents.<br>Weapons I have been trained on are as follows:
 
   <ul>
-      <li>M4</li>
-      <li>M9</li>
-      <li>M16</li>
-      <li>M203</li>
-      <li>M249</li>
-      <li>M240B</li>
+      <li class="weapons"><a href="https://en.wikipedia.org/wiki/M4_carbine" target="_blank">M4</a></li>
+      <li class="weapons"><a href="https://en.wikipedia.org/wiki/Beretta_M9" target="_blank">M9</a></li>
+      <li class="weapons"><a href="https://en.wikipedia.org/wiki/M16_rifle" target="_blank">M16</a></li>
+      <li class="weapons"><a href="https://en.wikipedia.org/wiki/M203_grenade_launcher" target="_blank">M203</a></li>
+      <li class="weapons"><a href="https://en.wikipedia.org/wiki/M249_light_machine_gun" target="_blank">M249</a></li>
+      <li class="weapons"><a href="https://en.wikipedia.org/wiki/M240_machine_gun" target="_blank">M240B</a></li>
 
   </ul>
 
@@ -35,7 +35,7 @@
 
   <img src="soul.jpg" alt="Souls Military Photo" class="center" width="600" height="600">
 
-<div class="link">
+<div>
       <a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/" target="_blank">
     Kirtland Warrior Recognition</a>
 </div>
