--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
 
-  <h1>My Life</h1>
+  <h1>The Life of So So</h1>
 </header>
   <script>
       alert("Are You Sure You Wanna Know About Soul?!?!")
