--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
 
-  <h1>The Life of So So</h1>
+  <h1>The Life of So,So</h1>
 </header>
   <script>
       alert("Are You Sure You Wanna Know About Soul?!?!")
@@ -39,11 +39,12 @@
       <a href="https://www.kirtland.af.mil/News/Article-Display/Article/389406/kirtland-warrior/" target="_blank">
     Kirtland Warrior Recognition</a>
 </div>
-  <h2>Civilian Life</h2>
+  <h3>Civilian Life</h3>
   <p>I spent most of my active duty life and my civilian life learning.<br>I find nothing more thrilling
 engaging with people for the sake of furthering our education. Once I was seperated from the military
 I could not escape my desire to learn. I made sure to sure as much of the Gi Bill as I could.<br>A few
 of the schools I went to:</p>
+  <div>
 <ul>
     <li><strong>Cuyahoga Community College</strong></li>
     <li><strong>Arapahoe Community College</strong></li>
@@ -55,7 +56,7 @@ of the schools I went to:</p>
     <li><strong>Heavy Construction Academy</strong></li>
 
 </ul>
-
+  </div>
   <p>Although I have had a lot of training and received many certificates, I have no formal degree. I like to consider myself
     a Professional Student. I have always enjoyed the school setting and being in an environment of learning.<br> Learning is a <strong>Top</strong>
     priority in my life, but gaming will always be my first true love.♥</p>
