--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       alert("LAST CHANCE!!!!!!")
   </script>
 <h2>Military Life</h2>
+  <p style="background-image: url('background.jpg');">
   <p> I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
     I spent most of my time doing <em><span style="color: red;">nuclear security</span></em>.<br> I became a certified Senior Entry Controller of a <span style="color: green;"> multi-billion dollar facility</span>
     at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5.<br>I also received training in law enforcement and responded to alerts and incidents.<br>Weapons I have been trained on are as follows:
