updated about me

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
       alert("LAST CHANCE!!!!!!")
   </script>
 <h2>Military Life</h2>
-  <p style="background-image: url('background.jpg');">
-  <p> I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
+    <p> I served in the <strong>United States Air Force</strong>. During my time in the <strong>United States Air Force</strong>,I was a Security Forces (military police) member.
     I spent most of my time doing <em><span style="color: red;">nuclear security</span></em>.<br> I became a certified Senior Entry Controller of a <span style="color: green;"> multi-billion dollar facility</span>
     at the rank of E-3. This duty is normally carried out by the rank of E-4 and E-5.<br>I also received training in law enforcement and responded to alerts and incidents.<br>Weapons I have been trained on are as follows:
-
+    </p>
   <ul>
       <li class="weapons"><a href="https://en.wikipedia.org/wiki/M4_carbine" target="_blank">M4</a></li>
       <li class="weapons"><a href="https://en.wikipedia.org/wiki/Beretta_M9" target="_blank">M9</a></li>
@@ -41,8 +40,8 @@
     Kirtland Warrior Recognition</a>
 </div>
   <h3>Civilian Life</h3>
-  <p>I spent most of my active duty life and my civilian life learning.<br>I find nothing more thrilling
-engaging with people for the sake of furthering our education. Once I was seperated from the military
+  <p>I spent most of my active duty life and my civilian life learning.<br>I find nothing more thrilling than
+engaging with people for the sake of furthering our education.<br> Even after I was seperated from the military
 I could not escape my desire to learn. I made sure to sure as much of the Gi Bill as I could.<br>A few
 of the schools I went to:</p>
   <div>
@@ -58,7 +57,7 @@ of the schools I went to:</p>
 
 </ul>
   </div>
-  <p>Although I have had a lot of training and received many certificates, I have no formal degree. I like to consider myself
+  <p>Although I have had a lot of training and received many certificates, I have no formal degree. <br> I like to consider myself
     a Professional Student. I have always enjoyed the school setting and being in an environment of learning.<br> Learning is a <strong>Top</strong>
     priority in my life, but gaming will always be my first true love.♥</p>
 
