tried to add heart

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       alert("Are You Sure You Wanna Know About Soul?!?!")
 
 
+      alert("Do you really wanna know?")
+
       alert("LAST CHANCE!!!!!!")
   </script>
 <h2>Military Life</h2>
@@ -60,6 +62,8 @@ of the schools I went to:</p>
   <p>Although I have had a lot of training and received many certificates, I have no formal degree. <br> I like to consider myself
     a Professional Student. I have always enjoyed the school setting and being in an environment of learning.<br> Learning is a <strong>Top</strong>
     priority in my life, but gaming will always be my first true love.♥</p>
+
+  <img src="pixels-karolina-grabowska-4197560.jpeg" alt = "heart" class = "center" width="600" height="600">
 
 
 <embed src="https://www.play-games.com/embed/21582.html" width="650" height="650">
